--- a/blocks/page.css
+++ b/blocks/page.css
@@ -6,6 +6,7 @@
   font-size: 16px;
   line-height: 1;
   padding: 0 80px;
+  min-width: 320px;
 }
 
 .page__section {
